@@ -32,6 +32,7 @@ use iMSCP::Execute;
 use iMSCP::Dir;
 use iMSCP::OpenSSL;
 use Net::LibIDN qw/idn_to_unicode/;
+use File::Spec;
 use Scalar::Defer;
 use parent 'Modules::Abstract';
 
@@ -214,14 +215,8 @@ sub _getHttpdData
 	unless($self->{'httpd'}) {
 		my $groupName = my $userName = $main::imscpConfig{'SYSTEM_USER_PREFIX'} .
 			($main::imscpConfig{'SYSTEM_USER_MIN_UID'} + $self->{'domain_admin_id'});
-
-		my $homeDir = "$main::imscpConfig{'USER_WEB_DIR'}/$self->{'user_home'}";
-		$homeDir =~ s~/+~/~g;
-		$homeDir =~ s~/$~~g;
-
-		my $webDir = "$homeDir/$self->{'subdomain_alias_mount'}";
-		$webDir =~ s~/+~/~g;
-		$webDir =~ s~/$~~g;
+		my $homeDir = File::Spec->canonpath("$main::imscpConfig{'USER_WEB_DIR'}/$self->{'user_home'}");
+		my $webDir = File::Spec->canonpath("$homeDir/$self->{'subdomain_alias_mount'}");
 
 		my $db = iMSCP::Database->factory();
 
@@ -417,14 +412,8 @@ sub _getPackagesData
 	unless($self->{'packages'}) {
 		my $userName = my $groupName =  $main::imscpConfig{'SYSTEM_USER_PREFIX'} .
 			($main::imscpConfig{'SYSTEM_USER_MIN_UID'} + $self->{'domain_admin_id'});
-
-		my $homeDir = "$main::imscpConfig{'USER_WEB_DIR'}/$self->{'user_home'}";
-		$homeDir =~ s~/+~/~g;
-		$homeDir =~ s~/$~~g;
-
-		my $webDir = "$homeDir/$self->{'subdomain_alias_mount'}";
-		$webDir =~ s~/+~/~g;
-		$webDir =~ s~/$~~g;
+		my $homeDir = File::Spec->canonpath("$main::imscpConfig{'USER_WEB_DIR'}/$self->{'user_home'}");
+		my $webDir = File::Spec->canonpath("$homeDir/$self->{'subdomain_alias_mount'}");
 
 		$self->{'packages'} = {
 			DOMAIN_ADMIN_ID => $self->{'domain_admin_id'},
